--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body {
     background-color: burlywood;
 }
+
+h1 {
+    color: blue;
+    transition: color 0.5s ease-in-out;
+}
+
+/* 1. class 정의 */
+.clicked {
+    color: tomato;
+}
+
+.sexy-font {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
