--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,30 @@
-/* body {
-  background-image: url("../img/0.jpeg");
-} */
+@import "reset.css";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+
+html,
+body {
+  width: 100vw;
+  height: 100vh;
+  font-family: "Roboto", sans-serif;
+}
+
+.background-image {
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
+  background-size: cover;
+}
+
+main {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#clock {
+  font-size: 150px;
+}
 
 .hidden {
   display: none;
