--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+/* Common */
+input {
+  font-size: 50px;
+  background: 0, 0;
+  border-left-width: 0;
+  border-right-width: 0;
+  border-top-width: 0;
+  border-bottom-width: 1;
+}
+
+/* main */
 .background-image {
   width: 100%;
   height: 100%;
@@ -17,15 +28,88 @@ body {
 
 main {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+}
+
+/* Screen Header */
+.screen-head {
+  width: 100%;
+  display: flex;
+  align-items: center;
   justify-content: center;
+}
+
+.screen-head__column {
+  width: 33%;
+}
+
+.screen-head__column:first-child {
+  margin-right: auto;
+}
+
+.screen-head__column:nth-child(2) {
+  text-align: center;
+}
+
+.screen-head__column:last-child {
+  margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* login */
+.screen-login {
+  margin-top: 350px;
+}
+
+.screen-login span {
+  font-weight: bold;
+  font-size: 50px;
+}
+
+.screen-login__input {
+  margin-top: 50px;
+}
+
+.screen-login__input input:focus {
+  outline: none;
+}
+
+/* main */
+.screen-main {
+  margin-top: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#quote {
+  font-size: 30px;
+  line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+#quote span {
+  display: block;
 }
 
 #clock {
   font-size: 150px;
 }
 
-.hidden {
-  display: none;
+#todo-form input:focus {
+  outline: none;
+}
+
+#todo-list {
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+#todo-list li {
+  margin-top: 5px;
 }
